--- a/WPFinterface/MainWindow.xaml
+++ b/WPFinterface/MainWindow.xaml
@@ -17,8 +17,9 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
             <RowDefinition Height="200" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="250" />
-            <RowDefinition Height="110" />
+            <RowDefinition Height="100" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10*" />
@@ -85,19 +86,33 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Name="panel_serverInfo" Grid.Row="2" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Stretch">
-            <Border Background="#FFEEEBE2" Margin="10,10,10,0" BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" >
+        <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+        <Border BorderThickness="1" BorderBrush="Gray" Width="Auto" Height="22" MinWidth="700" Margin="10,4,10,4"  >
+                <StackPanel Orientation="Horizontal" >
+                    <StackPanel Orientation="Horizontal" Background="{Binding opcError.errColor}" Width="240">
+                        <TextBlock Text="{Binding opcError.err.code}" Margin="10,0" Width="30"/>
+                        <TextBlock Text="{Binding opcError.err.message}" Margin="10,0" Width="Auto"/>
+                    </StackPanel>
+                    <TextBlock Text="{Binding selectedOPCserver.UrlString}"  FontSize="12" TextAlignment="Center" Margin="10,0"
+                                HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="{Binding infoLineColor}" />
+            </StackPanel>
+        </Border>
+        </StackPanel>
+
+        <StackPanel Name="panel_serverInfo" Grid.Row="3" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Stretch">
+            <Border Background="#FFEEEBE2" Margin="10,0,10,0" BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" >
                 <StackPanel Orientation="Horizontal" Margin="0" Background="#FFEEEBE2" >
                     <Button Content="Disconnect" x:Name="btn_Disconnect" HorizontalAlignment="Left"  
-                            VerticalAlignment="Center" Width="64" Height="22" Margin="2,0" 
+                            VerticalAlignment="Center" Width="64" Height="26" Margin="0" 
                             Click="btn_Disconnect_Click" />
-                    <Label Content="Recconnect interval:"/>
-                    <TextBox Text="{Binding selectedOPCserver.ReconnectInterval}" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Recconnect in:" />
+                    <TextBox Text="{Binding selectedOPCserver.ReconnectInterval}" VerticalContentAlignment="Center" VerticalAlignment="Center" Width="60
+                             " />
                 </StackPanel>
             </Border>
 
             <Border Background="#FFEEEBE2" Margin="10,10" BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" >
-                <Grid x:Name="grid_ServerStatus" Margin="10"  DataContext="{Binding selectedOPCserver}">
+                <Grid x:Name="grid_ServerStatus" Margin="10,0"  DataContext="{Binding selectedOPCserver}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -126,19 +141,19 @@
             </Border>
         </StackPanel>
 
-        <StackPanel Name="panel_Monitor" Grid.Row="2" Grid.Column="1"   Orientation="Vertical" Height="Auto" VerticalAlignment="Stretch">
-            <StackPanel Orientation="Horizontal">
-                <Button Content="Monitor ON" x:Name="btn_Subscribe" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="84" Height="22" 
+        <StackPanel Name="panel_Monitor" Grid.Row="3" Grid.Column="1"   Orientation="Vertical" Height="Auto" VerticalAlignment="Stretch">
+            <StackPanel Orientation="Horizontal" Margin="0,0" Height="28" >
+                <Button Content="Monitor ON" x:Name="btn_Subscribe" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="84" Height="26" 
                         Click="btn_Subscribe_Click" IsEnabled="{Binding btn_Subscribe_isEnable}"/>
-                <Button Content="Monitor OFF" x:Name="btn_UnSubscribe" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="84" Height="22" 
+                <Button Content="Monitor OFF" x:Name="btn_UnSubscribe" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="84" Height="26" 
                         Click="btn_UnSubscribe_Click" IsEnabled="{Binding btn_Unsubscribe_isEnable}" />
-                <Button Content="Clear" x:Name="btn_ClearSubscription" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="84" Height="22" 
+                <Button Content="Clear" x:Name="btn_ClearSubscription" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="84" Height="26" 
                         Click="btn_ClearSubscription_Click" IsEnabled="{Binding btn_ClearTags_isEnable}" />
             </StackPanel>
 
             <DataGrid Name="dgrid_Subscribed"   ItemsSource="{Binding opcSubscribedTags}" IsEnabled="{Binding list_SubscribedTags_isEnable}"
-                      Height="Auto" Margin="10,16" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                      Visibility="{Binding dgrid_Subscribed_isVisible, Converter={StaticResource BoolToVis} }"
+                      Height="Auto" Margin="10,10" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                      Visibility="{Binding dgrid_Subscribed_isVisible, Converter={StaticResource BoolToVis} }" IsReadOnly="True" MaxHeight="200"
                       AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Tag name" Width="Auto" Binding="{Binding Name}" />
@@ -159,19 +174,19 @@
             </DataGrid>
         </StackPanel>
 
-        <StackPanel Grid.Row="2" Grid.Column="2" Name="panel_Database"  Orientation="Vertical" HorizontalAlignment="Stretch">
-            <Border Background="#FFEEEBE2" Margin="10,10" BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" >
-                <StackPanel Grid.Row="2" Grid.Column="2"  Orientation="Horizontal" Margin="2" HorizontalAlignment="Center">
-                    <Button Content="Sync on" x:Name="btn_oraStartSync" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="64" Height="22" 
+        <StackPanel Grid.Row="3" Grid.Column="3" Name="panel_Database"  Orientation="Vertical" HorizontalAlignment="Stretch">
+            <Border Background="#FFDEDEDD" Margin="10,0" BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" >
+                <StackPanel Grid.Row="2" Grid.Column="2"  Orientation="Horizontal" Margin="0" HorizontalAlignment="Center">
+                    <Button Content="Sync on" x:Name="btn_oraStartSync" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="64" Height="26" 
                         Click="btn_oraStartSync_Click" IsEnabled="{Binding btn_SyncOn_isEnable}"/>
-                    <Button Content="Sync off" x:Name="btn_oraStopSync" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="64" Height="22" 
+                    <Button Content="Sync off" x:Name="btn_oraStopSync" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="64" Height="26" 
                         Click="btn_oraStopSync_Click" IsEnabled="{Binding btn_SyncOff_isEnable}" />
-                    <Button Content="Test" x:Name="btn_oraTestConnection" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="64" Height="22" 
+                    <Button Content="Test" x:Name="btn_oraTestConnection" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="64" Height="26" 
                         Click="btn_oraTestConnection_Click"  IsEnabled="{Binding btn_SyncOn_isEnable}" />
                 </StackPanel>
             </Border>
 
-            <Border Background="#FFEEEBE2" Margin="10,0" BorderBrush="Gray" BorderThickness="1" >
+            <Border Background="#FFECECEC" Margin="10,10" BorderBrush="Gray" BorderThickness="1" >
                 <StackPanel Orientation="Vertical" >
                     <Grid x:Name="grid_Database" Margin="0"  DataContext="{Binding }">
                         <Grid.RowDefinitions>
@@ -203,17 +218,9 @@
             </Border>
         </StackPanel>
 
-        <StackPanel Name="log_panel" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Vertical" Height="Auto" Margin="0" Background="{Binding infoLineColor}">
-            <Border BorderThickness="1" BorderBrush="Gray" Width="Auto" Height="22" MinWidth="700" Margin="10,4,10,4">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding opcError.code}" Margin="0" Width="Auto"/>
-                    <TextBlock Text="{Binding opcError.message}" Margin="10,0" Width="Auto"/>
-                    <TextBlock Text="{Binding selectedOPCserver.UrlString}"  FontSize="12" TextAlignment="Center" Margin="10,0"
-                                HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"/>
-                </StackPanel>
-            </Border>
-            <ListBox    x:Name="list_Log"  HorizontalAlignment="Stretch" Margin="10,0,10,0"
-                     MinWidth="700" Height="70" VerticalAlignment="Stretch" ItemsSource="{Binding messageLog, Mode=OneWay}" local:ListBoxExtenders.AutoScrollToEnd="True"  >
+        <StackPanel Name="log_panel" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Vertical" Height="Auto" Margin="0" >
+            <ListBox    x:Name="list_Log"  HorizontalAlignment="Stretch" Margin="10,0,10,0" VerticalAlignment="Bottom"
+                     MinWidth="700" Height="80" ItemsSource="{Binding messageLog, Mode=OneWay}" local:ListBoxExtenders.AutoScrollToEnd="True"  >
                 <ListBox.ItemTemplate >
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=Entry}"/>
